2003-07-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:
	Fixes compilation for x86-64 platform

2003-07-06  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #116758

	* configure.in: conditionally define BUILD_RUN_TOOL if popt is found.

	* tools/Makefile.am: build gda-run conditionally.

2003-07-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-xml-database.[ch] (gda_xml_database_get_version):
	(gda_xml_database_set_version): new functions.
	(gda_xml_database_new_from_uri): get the version number from the
	"database" XML node.
	(gda_xml_database_init): initialize "version" field.
	(gda_xml_database_finalize): free new field.
	(gda_xml_database_save): set the database version when saving.
	(gda_xml_database_to_string): added missing properties and nodes.

	* providers/xml/gda-xml-provider.c
	(gda_xml_provider_get_server_version): implemented.

2003-07-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-batch.[ch]:
	* libgda/libgda.h: removed GdaBatch class from library.

2003-07-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* providers/Makefile.am:
	* providers/default/*:
	* providers/xml/*: renamed default provider to XML.

2003-07-03  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 0.90.0

2003-06-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-value.[ch]: keep alphabetical sort.

	* libgda/gda-connection.h: added GDA_CONNECTION_OPTIONS_DONT_SHARE
	connection option.

	* libgda/gda-client.c: added more documentation.
	(gda_client_open_connection): if GDA_CONNECTION_OPTIONS_DONT_SHARE is
	specified in the connection options, don't reuse connections.

	* doc/C/tmpl/gda-client.sgml:
	* doc/C/tmpl/gda-command.sgml:
	* doc/C/tmpl/gda-config.sgml:
	* doc/C/tmpl/gda-connection.sgml: added more documentation.

2003-06-13  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS.

2003-06-12  Adam Williams <adam@morrison-ind.com>

	* libgda.spec.in: added missing stanzas for MDB and LDAP packages.