@@ -1,3 +1,8 @@
+2003-07-15  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* libgda/gda-select.c (gda_select_run): implemented basic cases...
+	(populate_from_single_table): ...like "select ... from table".
+
 2003-07-11  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* configure.in:
